Fixed margin on mobile

--- a/assets/css/musicmanager.css
+++ b/assets/css/musicmanager.css
@@ -776,7 +776,6 @@ a {
 }
 
 .mm-page-main-content {
-  padding: 10px 30px;
   color: #a5a5a5;
   display: grid;
 }
