--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -10,7 +10,6 @@
 }
 
 .mm-page-main-content {
-  padding: 10px 30px;
   color: #a5a5a5;
   display: grid;
 
